# devirt-dyn-write-test

./: Cargo.toml  README.md  rust-toolchain.toml
crates/inter_two_crates/app/: Cargo.toml
crates/inter_two_crates/app/src/: main.rs
crates/inter_two_crates/writerlib/: Cargo.toml
crates/inter_two_crates/writerlib/src/: lib.rs
crates/intra_single_crate/: Cargo.toml
crates/intra_single_crate/src/: main.rs
